# strawvarie-hydration-hero

./: .gitignore  README.md  build_mac.sh  check_setup.py  hydration_hero.spec  main.py  requirements.txt
.github/workflows/: release.yml
app/: .gitignore  README.md  index.html  overlay.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/docs/: character-brief.md
app/public/characters/berry/: manifest.json
app/public/characters/drip/: manifest.json
app/public/characters/sprout/: manifest.json
app/scripts/: generate_assets.py
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: custom.rs  lib.rs  main.rs  scheduler.rs  settings.rs  tray.rs  windows.rs
app/src/main/: main.css  main.ts
app/src/overlay/: overlay.css  overlay.ts  videoBuddy.ts
app/src/shared/: characters.ts  imageProcess.ts  ipc.ts  sprites.ts  theme.css  theme.ts
assets/guide/: guide.html
hydration_hero/: __init__.py  animation.py  app.py  brand.py  hero.py  macos_overlay.py  main_window.py  overlay_composer.py  overlay_subprocess.py  overlay_worker.py  paths.py  platform_compat.py  reminder.py  startup.py  storage.py  ui.py  video_processor.py
scripts/: extract_default_frames.py
