[package]
name = "hydration-hero"
version = "1.1.2"
description = "A friendly desktop hydration companion from Strawvarie."
authors = ["Strawvarie"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "hydration_hero_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
base64 = "0.22"
dirs = "5"

# macOS-only: lets the reminder overlay float above other apps and appear even
# when another app is in full-screen mode. We pin to the same objc2 stack Tauri
# already links, so there is exactly one Objective-C runtime in the binary.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
